; ModuleID = '/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_spreset.c_Reset_MenuKey.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_spreset.c_Reset_MenuKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@K_TAB = common dso_local global i32 0, align 4
@s_reset = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@QM_ACTIVATED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @Reset_MenuKey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Reset_MenuKey(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %12 [
    i32 131, label %4
    i32 129, label %4
    i32 130, label %4
    i32 128, label %4
    i32 110, label %6
    i32 78, label %6
    i32 121, label %9
    i32 89, label %9
  ]

4:                                                ; preds = %1, %1, %1, %1
  %5 = load i32, i32* @K_TAB, align 4
  store i32 %5, i32* %2, align 4
  br label %12

6:                                                ; preds = %1, %1
  %7 = load i32, i32* @QM_ACTIVATED, align 4
  %8 = call i32 @Reset_MenuEvent(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @s_reset, i32 0, i32 2), i32 %7)
  br label %12

9:                                                ; preds = %1, %1
  %10 = load i32, i32* @QM_ACTIVATED, align 4
  %11 = call i32 @Reset_MenuEvent(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @s_reset, i32 0, i32 1), i32 %10)
  br label %12

12:                                               ; preds = %1, %9, %6, %4
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @Menu_DefaultKey(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @s_reset, i32 0, i32 0), i32 %13)
  ret i32 %14
}

declare dso_local i32 @Reset_MenuEvent(i32*, i32) #1

declare dso_local i32 @Menu_DefaultKey(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
